maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:47: error: ':' expected but '=' found.
def isDirectionFree(Direction = dir) : Boolean = {
                              ^Escaper:66: error: identifier expected but '}' found.
}
^