maze.lessons.maze.pledge.PledgeMaze.scala.code
var sommeAngle = 0

override def run() {
  while(!estSurBiscuit()){
    if(getDirection() == Direction.NORD && isDirectionFree(Direction.NORD)){
      avance()
    }else if (!isDirectionFree(Direction.NORD)){
      keepHandOnSideWall()
    }else if (getDirection() == Direction.NORD && sommeAngle = 0){
      avance()
    }
  }
  prendBiscuit()
}



def keepHandOnSideWall(){
  if (murLeft() && !estFaceMur()){
    avance()
  }else if (murLeft() && estFaceMur()){
    droite()
    sommAngle+=1
  }else {
    gauche()
    sommeAngle+=-1
    avance()
  }
}




def murLeft(): Boolean = {
  gauche()
  if (estFaceMur()){
    droite()
    return true
  }else{
    droite()
    return false
  }
  
}

def isDirectionFree(Direction = dir) : Boolean = {
  var cpt = 0
  while (getDirection != dir){
    gauche()
    cpt+=1
  }
  if (!estFacemur()){
    for (i <- 1 to cpt){
      droite()
    }
    return true
  }else if (estFaceMur()){
    for (i <- 1 to cpt){
      droite()
    }
    return false
  }
}